<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Add_ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="렌즈 추가"
        android:textSize="20dp"
        android:gravity="center"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/EditText_lens_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="렌즈이름"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="왼쪽 착용 시작 날짜"
        android:padding="10dp"/>
    <DatePicker
        android:id="@+id/dp_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false">
    </DatePicker>
    <RadioGroup
        android:id="@+id/RadioGroup_lens_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="왼쪽 착용 주기"
            android:padding="10dp"
            />
        <RadioButton
            android:id="@+id/period_left_oneday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1일"/>
        <RadioButton
            android:id="@+id/period_left_twoweeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2주"/>
        <RadioButton
            android:id="@+id/period_left_onemonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1개월"/>
        <RadioButton
            android:id="@+id/period_left_sixmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="6개월"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="오른쪽 착용 시작 날짜"
        android:padding="10dp"/>
    <DatePicker
        android:id="@+id/dp_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false">
    </DatePicker>

    <RadioGroup
        android:id="@+id/RadioGroup_lens_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="오른쪽 착용 주기"
            android:padding="10dp"
            />
        <RadioButton
            android:id="@+id/period_right_oneday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1일"/>
        <RadioButton
            android:id="@+id/period_right_twoweeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2주"/>
        <RadioButton
            android:id="@+id/period_right_onemonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1개월"/>
        <RadioButton
            android:id="@+id/period_right_sixmonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="6개월"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/Button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="OK"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/Button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="CANCEL"
            android:textSize="30dp"
            android:layout_weight="1"
            android:textColor="#FFFFFF"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>