<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/time_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
        #오늘 착용한 시간 TextView
        <TextView
            android:id="@+id/TextView_time_title"
            android:text="TIME"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10dp"/>
        #팝업 알림에 대한 설정 버튼
        <ToggleButton
            android:id="@+id/Button_pop_up_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textOn="ON"
            android:textOff="OFF"
            android:background="@color/pink01"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/middleLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:textSize="15dp"
            android:layout_below="@+id/TextView_time_title"/>
        #렌즈를 이용한 시간 중 "시간" 단위 결과 (변화함)
        <TextView
            android:id="@+id/TextView_time_hours"
            android:text="0"
            android:textSize="24dp"
            android:layout_width="27dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/middleLine"
            android:layout_margin="10dp"/>
        #시간
        <TextView
            android:id="@+id/TextView_hours"
            android:text="시간"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/middleLine"
            android:layout_toRightOf="@+id/TextView_time_hours"
            android:layout_margin="10dp"
            />
        #렌즈를 이용한 시간 중 "분" 단위 결과
        <TextView
            android:id="@+id/TextView_time_minutes"
            android:text="0"
            android:textSize="24dp"
            android:layout_width="27dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/middleLine"
            android:layout_toRightOf="@+id/TextView_hours"
            android:layout_margin="10dp"
            />
        #분
        <TextView
            android:id="@+id/TextView_minutes"
            android:text="분"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/middleLine"
            android:layout_toRightOf="@+id/TextView_time_minutes"
            android:layout_margin="10dp"
            />

        <ImageButton
            android:id="@+id/time_start_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/middleLine"
            android:layout_toLeftOf="@+id/time_reset_button"
            android:background="@android:color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_marginRight="25dp"
            android:src="@drawable/startbtn" />

        <ImageButton
            android:id="@+id/time_reset_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/middleLine"
            android:layout_alignParentRight="true"
            android:src="@drawable/resetbtn"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent" />

</RelativeLayout>