...
            android:layout_marginBottom="20dp"
            android:text="아이아퍼"
            android:textSize="20dp"
            />

        <ImageButton
            android:id="@+id/eom"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="10dp"
...
